[tool.poetry]
package-mode = false
name = "data-science-agent"
version = "0.1.0"
description = ""
authors = ["sid-thephysicskid <siddabhinav@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
pandas = "^2.2.2"
langchain = "^0.1.20"
langgraph = "^0.0.49"
openai = "^1.30.1"
langsmith = "^0.1.59"
scikit-learn = "^1.4.2"
matplotlib = "^3.9.0"
langchain-core = "^0.1.52"
langchain-openai = "^0.1.7"
python-dotenv = "^1.0.1"
langchainhub = "^0.1.15"
hyperopt = "^0.2.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
